[package]
name = "implink"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
fs_extra = "1.3.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
terminal_size = "0.3.0"

[target.'cfg(windows)'.dependencies]
junction = "1.1.0"
